file struc/html/css

--- a/components/Pages/home.html
+++ b/components/Pages/home.html
@@ -20,7 +20,7 @@
             <nav>
                 <ul>
                     <li><a href="home.html">Home</a></li>
-                    <li><a href="aisles.html">Aisles</a></li>
+                    <li><a href="aisles/aisles.html">Aisles</a></li>
                     <li><a href="login.html">User login</a></li>
                     <li><a href="productDescription.html">Product Description</a></li>
                     <li><a href="createAccount.html">Create account</a></li>
@@ -38,7 +38,7 @@
          <div class="showcase-text">
              <h1>Food</h1>
              <p>This is our grocery store</p>
-             <a href="aisles.html" class="btn btn-outline">Order Now</a>
+             <a href="aisles/aisles.html" class="btn btn-outline">Order Now</a>
          </div>
          <div class="showcase-form card">
              <h2>Create account</h2>
@@ -64,30 +64,54 @@
         <h3 class="category-heading text-center my-1">
 Welcome to (Input name) the best online grocery store.
         </h3>
+
+
+
        <div class="grid grid-3 text-center my-4">
            <div>
-               <i class="fas fa-drumstick-bite"></i>
-               <p>Meat</p>
+                <!-- INSERT HERF FOR MEAT -->
+               <a href=" " class="btn btn-primary">
+                   <i class="fas fa-drumstick-bite"></i>
+                   <p>Meat</p>
+               </a>
+
            </div>
+
            <div>
+               <a href="aisles/fruitsAndVegetables.html" class="btn btn-primary">
                <i class="fas fa-apple-alt"></i>
-               <p>Fruits</p>
+               <p>Fruits and Vegetables</p>
+               </a>
            </div>
+
            <div>
+         <!-- ADD THE HERF-->
+               <a href=" " class="btn btn-primary">
                <i class="fas fa-bread-slice"></i>
                <p>Bread</p>
+               </a>
            </div>
            <div>
+               <!-- ADD THE HERF-->
+               <a href="" class="btn btn-primary">
                <i class="fas fa-carrot"></i>
                <p>Vegetables</p>
+               </a>
            </div>
+
            <div>
+               <!-- ADD THE HERF-->
+               <a href="" class="btn btn-primary">
                <i class="fas fa-egg"></i>
                <p>Dairy</p>
+               </a>
            </div>
            <div>
+               <!-- ADD THE HERF-->
+               <a href="" class="btn btn-primary">
                <i class="fas fa-fish"></i>
                <p>Fish</p>
+               </a>
            </div>
 
 
