Home page update/userlogin/usercreateaccount

--- a/components/Pages/aisles/fruitsAndVegetables.html
+++ b/components/Pages/aisles/fruitsAndVegetables.html
@@ -1,1 +1,5 @@
-test
+<!--Static left hand bar-->
+<!--Static search bar for fruits-->
+<!--Show 6 fruits only -->
+<!--Price under it-->
+<!--Name and description of the product-->
