--- a/components/Pages/createAccount.html
+++ b/components/Pages/createAccount.html
@@ -1,1 +1,55 @@
-YOU HAVE CREATED ACCOUNT ---> TEST
+<!doctype html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <link rel="stylesheet" href="../../css/index.css">
+    <link rel="stylesheet"
+          href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css"
+          integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA=="
+          crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Grocery Store </title>
+</head>
+<body>
+
+<!--Navbar-->
+<div class="navbar">
+    <div class="container flex">
+        <h1 class="logo">Grocery Store</h1>
+        <nav>
+            <ul>
+                <li><a href="home.html">Home</a></li>
+                <li><a href="aisles/aisles.html">Aisles</a></li>
+                <li><a href="login.html">User login</a></li>
+                <li><a href="productDescription.html">Product Description</a></li>
+                <li><a href="createAccount.html">Create account</a></li>
+                <li><a href="cart.html">Cart</a></li>
+            </ul>
+
+        </nav>
+    </div>
+</div>
+
+<div class="showcase-form card">
+    <h2>Create Account</h2>
+    <form>
+        <div class="form-control">
+            <input type="text" name="name" placeholder="First Name" required>
+        </div>
+        <div class="form-control">
+            <input type="text" name="name" placeholder="Last Name" required>
+        </div>
+        <div class="form-control">
+            <input type="email" name="name" placeholder="Email" required>
+        </div>
+        <div class="form-control">
+            <input type="password" name="password" placeholder="password" required>
+        </div>
+        <input type="submit" value="Send" class ="btn btn-primary">
+
+    </form>
+</div>
+</body>
+</html>
