--- a/components/Pages/home.html
+++ b/components/Pages/home.html
@@ -61,64 +61,81 @@
 <!--Category-->
 <section class="category">
     <div class="container">
-        <h3 class="category-heading text-center my-1">
-Welcome to (Input name) the best online grocery store.
-        </h3>
-
-
-
-       <div class="grid grid-3 text-center my-4">
-           <div>
-                <!-- INSERT HERF FOR MEAT -->
-               <a href=" " class="btn btn-primary">
-                   <i class="fas fa-drumstick-bite"></i>
-                   <p>Meat</p>
-               </a>
-
-           </div>
-
-           <div>
-               <a href="aisles/fruitsAndVegetables.html" class="btn btn-primary">
-               <i class="fas fa-apple-alt"></i>
-               <p>Fruits and Vegetables</p>
-               </a>
-           </div>
-
-           <div>
-         <!-- ADD THE HERF-->
-               <a href=" " class="btn btn-primary">
-               <i class="fas fa-bread-slice"></i>
-               <p>Bread</p>
-               </a>
-           </div>
-           <div>
-               <!-- ADD THE HERF-->
-               <a href="" class="btn btn-primary">
-               <i class="fas fa-carrot"></i>
-               <p>Vegetables</p>
-               </a>
-           </div>
-
-           <div>
-               <!-- ADD THE HERF-->
-               <a href="" class="btn btn-primary">
-               <i class="fas fa-egg"></i>
-               <p>Dairy</p>
-               </a>
-           </div>
-           <div>
-               <!-- ADD THE HERF-->
-               <a href="" class="btn btn-primary">
-               <i class="fas fa-fish"></i>
-               <p>Fish</p>
-               </a>
-           </div>
-
-
+       <div class="md text-center my-2">
+           Shop by our sections
        </div>
+        <div class="container flex">
+            <div class="card btn">
+                <h4>Meat</h4>
+                <i class="fas fa-drumstick-bite"></i>
+            </div>
+
+            <a href="aisles/fruitsAndVegetables.html" >
+            <div class="card btn">
+                <h4>Fruits and Vegetables</h4>
+                <i class="fas fa-apple-alt"></i>
+                <i class="fas fa-carrot"></i>
+            </div>
+            </a>
+            <div class="card btn">
+                <h4>Bread</h4>
+                <i class="fas fa-bread-slice"></i>
+            </div>
+
+            <div class="card btn">
+                <h4>Eggs and Dairy</h4>
+                <i class="fas fa-egg"></i>
+            </div>
+            <div class="card btn">
+                <h4>Fish</h4>
+                <i class="fas fa-fish"></i>
+            </div>
+
+
+        </div>
+
     </div>
 </section>
 
+
+
+<!--FOOD SECTION PREVIEW-->
+        <section class="cloud bg-primary my-2 py-2">
+            <div class="container grid">
+                <div class="text-center">
+                    <h2 class="lg">Our Products</h2>
+                    <p class="lead my-1">
+                        Our Fresh made food  </p>
+                        <a  href="aisles/aisles.html" class="btn btn-dark">Shop now</a>
+
+                </div>
+                <!--  LIST OF THE FOOD-->
+                <img src="/images/fruitsAndVeges.jpg" alt="Fruits and Vegetables">
+            </div>
+        </section>
+
+
+<!--   FOOTER     -->
+<footer class="footer bg-dark py-5">
+    <div class="container grid grid-3">
+        <div>
+            <h1>Grocery store</h1>
+            <p>Copyright &copy; 2021</p>
+        </div>
+        <nav>
+            <ul>
+                <li><a href="home.html"></a>Home</li>
+                <li><a href="login.html"></a>Login</li>
+                <li><a href="createAccount.html"></a>Create Account</li>
+            </ul>
+        </nav>
+        <div class="social">
+            <a href="#"><i class="fab fa-twitter fa-2x"></i></a>
+            <a href="#"><i class="fab fa-facebook fa-2x"></i></a>
+            <a href="#"><i class="fab fa-instagram fa-2x"></i></a>
+        </div>
+    </div>
+</footer>
 
 </body>
 </html>
