--- a/components/Pages/createAccount.html
+++ b/components/Pages/createAccount.html
@@ -21,31 +21,33 @@
         <nav>
             <ul>
                 <li><a href="home.html">Home</a></li>
-                <li><a href="aisles/aisles.html">Aisles</a></li>
+                <li><a href="aisles/aisles.html">Aisles</a>
+                </li>
                 <li><a href="login.html">User login</a></li>
                 <li><a href="productDescription.html">Product Description</a></li>
                 <li><a href="createAccount.html">Create account</a></li>
                 <li><a href="cart.html">Cart</a></li>
             </ul>
-
         </nav>
     </div>
+
 </div>
 
 <div class="showcase-form card">
     <h2>Create Account</h2>
     <form>
         <div class="form-control">
-            <input type="text" name="name" placeholder="First Name" required>
+            <input  type="text" name="name" placeholder="First Name" required>
         </div>
         <div class="form-control">
             <input type="text" name="name" placeholder="Last Name" required>
         </div>
         <div class="form-control">
-            <input type="email" name="name" placeholder="Email" required>
+            <input type="email" id="name" name="name" placeholder="Email" required>
         </div>
         <div class="form-control">
-            <input type="password" name="password" placeholder="password" required>
+            <input type="password" name="password" placeholder="password" required
+                   minlength="4" maxlength="8" size="10">
         </div>
         <input type="submit" value="Send" class ="btn btn-primary">
 
