--- a/components/Pages/login.html
+++ b/components/Pages/login.html
@@ -36,10 +36,12 @@
             <input type="email" name="name" placeholder="Email" required>
         </div>
         <div class="form-control">
-            <input type="password" name="password" placeholder="password" required>
+            <input type="password" name="password" placeholder="password" required
+                   minlength="4" maxlength="8" size="10">
         </div>
         <div class="form-control">
-            <input type="password" name="password" placeholder="Confirm password" required>
+            <input type="password" name="password" placeholder="Confirm password" required
+                   minlength="4" maxlength="8" size="10">
         </div>
 
         <input type="submit" value="Send" class ="btn btn-primary">
