--- a/css/index.css
+++ b/css/index.css
@@ -60,6 +60,7 @@ img{
     justify-content: space-between;
 }
 
+
 /*ShowCase*/
 .showcase{
     height: 400px;
@@ -76,7 +77,7 @@ img{
 .showcase.grid{
     overflow: visible;
     grid-template-columns: 55%  45%;
-    gap:30px;
+    gap: 30px;
 
 }
 .showcase-form{
@@ -93,7 +94,8 @@ img{
     margin: 30px 0;
 }
 .showcase-form input[type='text'],
-.showcase-form input[type='email']{
+.showcase-form input[type='email'],
+.showcase-form input[type = 'password']{
     border: 0;
     border-bottom: 1px solid #b4becb;
     width: 100%;
@@ -105,24 +107,25 @@ img{
     outline: none;
 }
 
-.showcase::before,
-.showcase::after{
-    content:' ';
-    position: absolute;
-    height: 100px;
-    bottom: -70px;
-    right: 0;
-    left: 0;
-/*    the slant */
-    background-color: red;
-    transform: skewY(-3deg);
-    -webkit-transform: skewY(-3deg);
-    -moz-transform: skewY(-3deg);
-    -ms-transform: skewY(-3deg);
-}
+
+/*.showcase::before,*/
+/*.showcase::after{*/
+/*    content:' ';*/
+/*    position: absolute;*/
+/*    height: 100px;*/
+/*    bottom: -70px;*/
+/*    right: 0;*/
+/*    left: 0;*/
+/*!*!*    the slant *!*!*/
+/*!*    background-color: red;*!*/
+/*!*    transform: skewY(-3deg);*!*/
+/*!*    -webkit-transform: skewY(-3deg);*!*/
+/*!*    -moz-transform: skewY(-3deg);*!*/
+/*!*    -ms-transform: skewY(-3deg);*!*/
+/*}*/
 /*Category*/
 .category{
-    padding-top: 100px;
+    padding-top: 30px;
 }
 .category-heading{
     max-width: 500px;
@@ -147,6 +150,13 @@ img{
     padding: 20px;
     margin: 10px;
 }
+.flex{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+}
+
 .btn{
     display: inline-block;
     padding: 10px 30px;
@@ -329,6 +339,10 @@ img{
 
 
 /*FOOTER*/
+.footer{
+    overflow: visible;
+    height: 100px;
+}
 .footer a{
     margin: 0 10px;
 }
@@ -336,7 +350,23 @@ img{
     margin: 0 10px;
 }
 
+.category .flex {
+    flex-wrap: wrap;
 
+}
+
+.category .card {
+    text-align: center;
+    margin: 18px 10px 40px;
+    transition: transform 0.2s ease-in;
+}
+.category .card h4{
+    font-size: 20px;
+}
+.category .card:hover{
+   /* HOVERS UP*/
+   transform: translateY(-15px);
+}
 /*FOR THE TABLES AND IPHONE*/
 @media(max-width: 768px) {
     .grid,
@@ -369,6 +399,35 @@ img{
     }
     .navbar ul{
         padding: 10px;
-        background-color: deepskyblue;
+        background-color: skyblue;
     }
+}
+
+
+/*FRUITS AND VEGESS*/
+.product .box-container{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1.5rem;
+
+}
+.product .box-container .box{
+    flex: 1 1 30rem;
+    flex-wrap: wrap;
+   padding: 2rem;
+    border: 1rem solid var(--primary-color);
+    border-radius: 0.5rem;
+    overflow: hidden;
+    position: relative;
+    justify-content: space-between;
+}
+.product .box-container .box .discount{
+    position: absolute;
+    top: 1rem;
+    left: 1rem;
+    background:  rgba(0,0,0,0.3);
+    font-size: 2rem;
+}
+.product .heading {
+    font-size: 30px;
 }
