party girl leena

--- a/components/Pages/aisles/eggsAndDairy.html
+++ b/components/Pages/aisles/eggsAndDairy.html
@@ -37,27 +37,39 @@
 
     <!--ShowCase-->
     <section>
-      <div class="md text-center my-2">Fruits and Vegetables</div>
+      <div class="md text-center my-2">Eggs and Diary</div>
     </section>
 
     <section class="product my-2 py-2">
-      <h1 class="heading">Our latest Fruits and Vegetables</h1>
+      <h1 class="heading">Our Eggs and Dairy Products</h1>
       <div class="box-container my-2 py-2">
         <div class="box">
-          <img src="../../../images/banana.jpg" alt="Bananas" />
-          <h3>Bananas</h3>
-          <div class="price">$0.99 <span>tax not included</span></div>
+          <img src="new images 2/oeuf.jpeg" alt="Eggs" />
+          <h3>Eggs</h3>
+          <div class="price">$0.15 <span>tax not included</span></div>
           <div class="quantity">
             <span>Quantity: </span>
             <input type="number" min="1" max="100" value="1" />
-            <span>/pounds</span>
+            <span>/unit</span>
           </div>
           <a href="#" class="btn">add to cart</a>
         </div>
         <!--TOMATOES-->
         <div class="box">
-          <img src="../../../images/mango.jpg" alt="Mango" />
-          <h3>Mango</h3>
+          <img src="new images 2/milk.jpeg" alt="milk" />
+          <h3>Milk</h3>
+          <div class="price">$2.50 <span>tax not included</span></div>
+          <div class="quantity">
+            <span>Quantity: </span>
+            <input type="number" min="1" max="100" value="1" />
+            <span>/Liter</span>
+          </div>
+          <a href="#" class="btn">add to cart</a>
+        </div>
+
+        <div class="box">
+          <img src="new images 2/butter.jpeg" alt="BUTTER" />
+          <h3>Butter</h3>
           <div class="price">$0.99 <span>tax not included</span></div>
           <div class="quantity">
             <span>Quantity: </span>
@@ -68,44 +80,32 @@
         </div>
 
         <div class="box">
-          <img src="../../../images/orange.jpg" alt="Orange" />
-          <h3>Orange</h3>
-          <div class="price">$0.99 <span>tax not included</span></div>
+          <img src="new images 2/yogurt.jpeg" alt="yogurt" />
+          <h3>Natural 3.5% Yogurt</h3>
+          <div class="price">$2.50 <span>tax not included</span></div>
           <div class="quantity">
             <span>Quantity: </span>
             <input type="number" min="1" max="100" value="1" />
-            <span>/pounds</span>
+            <span>/Liter</span>
           </div>
           <a href="#" class="btn">add to cart</a>
         </div>
 
         <div class="box">
-          <img src="../../../images/cucumber.jpg" alt="Cucumber" />
-          <h3>Cucumber</h3>
-          <div class="price">$0.99 <span>tax not included</span></div>
+          <img src="new images 2/creme.jpeg" alt="Creme" />
+          <h3>15% Creme</h3>
+          <div class="price">$1.15 <span>tax not included</span></div>
           <div class="quantity">
             <span>Quantity: </span>
             <input type="number" min="1" max="100" value="1" />
-            <span>/pounds</span>
-          </div>
-          <a href="#" class="btn">add to cart</a>
-        </div>
-
-        <div class="box">
-          <img src="../../../images/tomatoe.jpg" alt="Tomatoes" />
-          <h3>Tomatoes</h3>
-          <div class="price">$0.99 <span>tax not included</span></div>
-          <div class="quantity">
-            <span>Quantity: </span>
-            <input type="number" min="1" max="100" value="1" />
-            <span>/pounds</span>
+            <span>/Liter</span>
           </div>
           <a href="#" class="btn">add to cart</a>
         </div>
         <div class="box">
-          <img src="../../../images/onions.jpg" alt="Onions" />
-          <h3>Onions</h3>
-          <div class="price">$0.99 <span>tax not included</span></div>
+          <img src="new images 2/fromage.jpeg" alt="cheese" />
+          <h3>Brie Cheese</h3>
+          <div class="price">$3.50 <span>tax not included</span></div>
           <div class="quantity">
             <span>Quantity: </span>
             <input type="number" min="1" max="100" value="1" />
