--- a/components/Pages/aisles/meatAndFish.html
+++ b/components/Pages/aisles/meatAndFish.html
@@ -37,16 +37,16 @@
 
     <!--ShowCase-->
     <section>
-      <div class="md text-center my-2">Fruits and Vegetables</div>
+      <div class="md text-center my-2">Meat And Fish</div>
     </section>
 
     <section class="product my-2 py-2">
-      <h1 class="heading">Our latest Fruits and Vegetables</h1>
+      <h1 class="heading">Our Meat and Fish Section</h1>
       <div class="box-container my-2 py-2">
         <div class="box">
-          <img src="../../../images/banana.jpg" alt="Bananas" />
-          <h3>Bananas</h3>
-          <div class="price">$0.99 <span>tax not included</span></div>
+          <img src="new images 2/ground_beef.jpeg" alt="Ground Beef" />
+          <h3>Ground Beef</h3>
+          <div class="price">$4.25 <span>tax not included</span></div>
           <div class="quantity">
             <span>Quantity: </span>
             <input type="number" min="1" max="100" value="1" />
@@ -56,9 +56,9 @@
         </div>
         <!--TOMATOES-->
         <div class="box">
-          <img src="../../../images/mango.jpg" alt="Mango" />
-          <h3>Mango</h3>
-          <div class="price">$0.99 <span>tax not included</span></div>
+          <img src="new images 2/raw steak.jpeg" alt="steak" />
+          <h3>Steak</h3>
+          <div class="price">$7.89 <span>tax not included</span></div>
           <div class="quantity">
             <span>Quantity: </span>
             <input type="number" min="1" max="100" value="1" />
@@ -68,9 +68,9 @@
         </div>
 
         <div class="box">
-          <img src="../../../images/orange.jpg" alt="Orange" />
-          <h3>Orange</h3>
-          <div class="price">$0.99 <span>tax not included</span></div>
+          <img src="new images 2/chicken.jpeg" alt="chicken Breast" />
+          <h3>Chicken Breast</h3>
+          <div class="price">$13.00 <span>tax not included</span></div>
           <div class="quantity">
             <span>Quantity: </span>
             <input type="number" min="1" max="100" value="1" />
@@ -80,9 +80,9 @@
         </div>
 
         <div class="box">
-          <img src="../../../images/cucumber.jpg" alt="Cucumber" />
-          <h3>Cucumber</h3>
-          <div class="price">$0.99 <span>tax not included</span></div>
+          <img src="new images 2/salmon.jpeg" alt="Salmon" />
+          <h3>Salmon</h3>
+          <div class="price">$9.99 <span>tax not included</span></div>
           <div class="quantity">
             <span>Quantity: </span>
             <input type="number" min="1" max="100" value="1" />
@@ -92,9 +92,9 @@
         </div>
 
         <div class="box">
-          <img src="../../../images/tomatoe.jpg" alt="Tomatoes" />
-          <h3>Tomatoes</h3>
-          <div class="price">$0.99 <span>tax not included</span></div>
+          <img src="new images 2/tuna.jpeg" alt="Tuna Fish" />
+          <h3>Tuna Fish</h3>
+          <div class="price">$6.99 <span>tax not included</span></div>
           <div class="quantity">
             <span>Quantity: </span>
             <input type="number" min="1" max="100" value="1" />
@@ -103,9 +103,9 @@
           <a href="#" class="btn">add to cart</a>
         </div>
         <div class="box">
-          <img src="../../../images/onions.jpg" alt="Onions" />
-          <h3>Onions</h3>
-          <div class="price">$0.99 <span>tax not included</span></div>
+          <img src="new images 2/shrimp.jpeg" alt="Shrimp" />
+          <h3>Shrimp</h3>
+          <div class="price">$9.99 <span>tax not included</span></div>
           <div class="quantity">
             <span>Quantity: </span>
             <input type="number" min="1" max="100" value="1" />
