--- a/components/Pages/aisles/pastryAndBakery.html
+++ b/components/Pages/aisles/pastryAndBakery.html
@@ -37,79 +37,82 @@
 
     <!--ShowCase-->
     <section>
-      <div class="md text-center my-2">Fruits and Vegetables</div>
+      <div class="md text-center my-2">Bakery and Pastry</div>
     </section>
 
     <section class="product my-2 py-2">
-      <h1 class="heading">Our latest Fruits and Vegetables</h1>
+      <h1 class="heading">Our Bakery and Pastry Section</h1>
       <div class="box-container my-2 py-2">
         <div class="box">
-          <img src="../../../images/banana.jpg" alt="Bananas" />
-          <h3>Bananas</h3>
+          <img src="new images 2/baguette.jpeg" alt="Baguette" />
+          <h3>Baguette</h3>
           <div class="price">$0.99 <span>tax not included</span></div>
           <div class="quantity">
             <span>Quantity: </span>
             <input type="number" min="1" max="100" value="1" />
-            <span>/pounds</span>
+            <span>/Unit</span>
           </div>
           <a href="#" class="btn">add to cart</a>
         </div>
-        <!--TOMATOES-->
+        <!--BAKERY AND PASTRY-->
         <div class="box">
-          <img src="../../../images/mango.jpg" alt="Mango" />
-          <h3>Mango</h3>
-          <div class="price">$0.99 <span>tax not included</span></div>
+          <img src="new images 2/bagel.jpeg" alt="Bagel" />
+          <h3>Bagel</h3>
+          <div class="price">$1.99 <span>tax not included</span></div>
           <div class="quantity">
             <span>Quantity: </span>
             <input type="number" min="1" max="100" value="1" />
-            <span>/pounds</span>
-          </div>
-          <a href="#" class="btn">add to cart</a>
-        </div>
-
-        <div class="box">
-          <img src="../../../images/orange.jpg" alt="Orange" />
-          <h3>Orange</h3>
-          <div class="price">$0.99 <span>tax not included</span></div>
-          <div class="quantity">
-            <span>Quantity: </span>
-            <input type="number" min="1" max="100" value="1" />
-            <span>/pounds</span>
+            <span>/Unit</span>
           </div>
           <a href="#" class="btn">add to cart</a>
         </div>
 
         <div class="box">
-          <img src="../../../images/cucumber.jpg" alt="Cucumber" />
-          <h3>Cucumber</h3>
-          <div class="price">$0.99 <span>tax not included</span></div>
+          <img src="new images 2/loaf bread.jpeg" alt="LOAF BREAD" />
+          <h3>Loaf bread</h3>
+          <div class="price">$4.99 <span>tax not included</span></div>
           <div class="quantity">
             <span>Quantity: </span>
             <input type="number" min="1" max="100" value="1" />
-            <span>/pounds</span>
+            <span>/Unit</span>
           </div>
           <a href="#" class="btn">add to cart</a>
         </div>
 
         <div class="box">
-          <img src="../../../images/tomatoe.jpg" alt="Tomatoes" />
-          <h3>Tomatoes</h3>
+          <img
+            src="new images 2/chocolate _chip_cookie.jpeg"
+            alt="chocolate chip cookiesr"
+          />
+          <h3>Chocolate Chip Cookie</h3>
           <div class="price">$0.99 <span>tax not included</span></div>
           <div class="quantity">
             <span>Quantity: </span>
             <input type="number" min="1" max="100" value="1" />
-            <span>/pounds</span>
+            <span>/Unit</span>
+          </div>
+          <a href="#" class="btn">add to cart</a>
+        </div>
+
+        <div class="box">
+          <img src="new images 2/chocolate_cake.jpeg" alt="CHOCOLATE CAKE" />
+          <h3>Chocolate Cake with Chocolate Icing</h3>
+          <div class="price">$5.99 <span>tax not included</span></div>
+          <div class="quantity">
+            <span>Quantity: </span>
+            <input type="number" min="1" max="100" value="1" />
+            <span>/Unit</span>
           </div>
           <a href="#" class="btn">add to cart</a>
         </div>
         <div class="box">
-          <img src="../../../images/onions.jpg" alt="Onions" />
-          <h3>Onions</h3>
-          <div class="price">$0.99 <span>tax not included</span></div>
+          <img src="new images 2/croissant.jpeg" alt="CROISSANT" />
+          <h3>Croissant</h3>
+          <div class="price">$3.99 <span>tax not included</span></div>
           <div class="quantity">
             <span>Quantity: </span>
             <input type="number" min="1" max="100" value="1" />
-            <span>/pounds</span>
+            <span>/Unit</span>
           </div>
           <a href="#" class="btn">add to cart</a>
         </div>
