--- a/css/index.css
+++ b/css/index.css
@@ -1,112 +1,109 @@
-@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap");
 
 /*Define the CSS property --> will be used all over*/
-:root{
-    --primary-color:skyblue;
+:root {
+  --primary-color: skyblue;
 }
-*{
-    box-sizing: border-box;
-    padding: 0;
-    margin: 0;
-}
-
-body{
-    font-family: 'Lato', sans-serif;
-    color: #333;
-    line-height: 1.6;
+* {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
 }
 
-ul{
-    list-style-type: none;
+body {
+  font-family: "Lato", sans-serif;
+  color: #333;
+  line-height: 1.6;
 }
 
-a{
-    text-decoration: none;
-    color: black;
+ul {
+  list-style-type: none;
 }
 
-h1,h2{
-    font-weight: 300 ;
-    line-height: 1.2;
-    margin: 10px 0;
+a {
+  text-decoration: none;
+  color: black;
 }
 
-p{
-    margin: 10px 0;
-
+h1,
+h2 {
+  font-weight: 300;
+  line-height: 1.2;
+  margin: 10px 0;
 }
-img{
-    width: 100%;
+
+p {
+  margin: 10px 0;
+}
+img {
+  width: 100%;
 }
 /*Navbar styling*/
-.navbar{
-    background-color: var(--primary-color);
-    color: white;
-    height: 70px;
+.navbar {
+  background-color: var(--primary-color);
+  color: white;
+  height: 70px;
 }
-.navbar ul{
-    display: flex;
+.navbar ul {
+  display: flex;
 }
-.navbar a{
-    color: #ffff;
-    padding: 10px;
-    margin: 0 5px;
-}
-
-.navbar a:hover{
-    border-bottom: 2px #fff solid;
-}
-.navbar .flex{
-    justify-content: space-between;
+.navbar a {
+  color: #ffff;
+  padding: 10px;
+  margin: 0 5px;
 }
 
+.navbar a:hover {
+  border-bottom: 2px #fff solid;
+}
+.navbar .flex {
+  justify-content: space-between;
+}
 
 /*ShowCase*/
-.showcase{
-    height: 400px;
-    background-color: var(--primary-color) ;
-    color: white;
-    position: relative;
+.showcase {
+  height: 400px;
+  background-color: var(--primary-color);
+  color: white;
+  position: relative;
 }
-.showcase h1{
-    font-size: 40px;
+.showcase h1 {
+  font-size: 40px;
 }
-.showcase p{
-    margin: 20px 0;
+.showcase p {
+  margin: 20px 0;
 }
-.showcase.grid{
-    overflow: visible;
-    grid-template-columns: 55%  45%;
-    gap: 30px;
-
+.showcase.grid {
+  overflow: visible;
+  grid-template-columns: 55% 45%;
+  gap: 30px;
 }
-.showcase-form{
-    position: relative;
-    top: 60px;
-    height: 350px;
-    width: 400px;
-    padding: 40px;
-    z-index: 100;
-    justify-self: flex-end;
-}
-
-.showcase-form .form-control{
-    margin: 30px 0;
-}
-.showcase-form input[type='text'],
-.showcase-form input[type='email'],
-.showcase-form input[type = 'password']{
-    border: 0;
-    border-bottom: 1px solid #b4becb;
-    width: 100%;
-    padding: 3px;
-    font-size: 16px;
+.showcase-form {
+  position: relative;
+  top: 60px;
+  height: 350px;
+  width: 400px;
+  padding: 40px;
+  z-index: 100;
+  justify-self: flex-end;
 }
 
-.showcase-form input:focus{
-    outline: none;
+.showcase-form .form-control {
+  margin: 30px 0;
+}
+.showcase-form input[type="text"],
+.showcase-form input[type="email"],
+.showcase-form input[type="password"] {
+  border: 0;
+  border-bottom: 1px solid #b4becb;
+  width: 100%;
+  padding: 3px;
+  font-size: 16px;
 }
 
+.showcase-form input:focus {
+  outline: none;
+}
 
 /*.showcase::before,*/
 /*.showcase::after{*/
@@ -124,310 +121,309 @@ img{
 /*!*    -ms-transform: skewY(-3deg);*!*/
 /*}*/
 /*Category*/
-.category{
-    padding-top: 30px;
+.category {
+  padding-top: 30px;
 }
-.category-heading{
-    max-width: 500px;
-    margin: auto;
+.category-heading {
+  max-width: 500px;
+  margin: auto;
 }
-.category .grid p{
-    font-size: 20px;
-    font-weight: bold;
+.category .grid p {
+  font-size: 20px;
+  font-weight: bold;
 }
 /*Utilities --> Used all over the website*/
-.container{
-    max-width: 1100px;
-    margin: 0 auto;
-    overflow: auto;
-    padding: 0 40px;
+.container {
+  max-width: 1100px;
+  margin: 0 auto;
+  overflow: auto;
+  padding: 0 40px;
 }
-.card{
-    background-color: white;
-    color: #333;
-    border-radius: 10px;
-    box-shadow: 0 3px 10px rgba(0,0,0,0.2);
-    padding: 20px;
-    margin: 10px;
+.card {
+  background-color: white;
+  color: #333;
+  border-radius: 10px;
+  box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2);
+  padding: 20px;
+  margin: 10px;
 }
-.flex{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100%;
+.flex {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
 }
 
-.btn{
-    display: inline-block;
-    padding: 10px 30px;
-    cursor: pointer;
-    background-color: var(--primary-color);
-    color: white;
-    border: none;
-    border-radius: 5px;
+.btn {
+  display: inline-block;
+  padding: 10px 30px;
+  cursor: pointer;
+  background-color: var(--primary-color);
+  color: white;
+  border: none;
+  border-radius: 5px;
 }
 .btn-outline {
   background-color: transparent;
   border: 1px white solid;
 }
-.text-center{
-    text-align: center;
+.text-center {
+  text-align: center;
 }
-.btn:hover{
-    transform: scale(0.98);
+.btn:hover {
+  transform: scale(0.98);
 }
 
 /*Background and Adding the colors to buttons*/
-.bg-primary, .btn-primary {
-    background-color: var(--primary-color);
-    color: white;
+.bg-primary,
+.btn-primary {
+  background-color: var(--primary-color);
+  color: white;
 }
-.bg-secondary, .btn-secondary {
-    background-color: darkblue;
-    color: white;
+.bg-secondary,
+.btn-secondary {
+  background-color: darkblue;
+  color: white;
 }
-.bg-dark, .btn-dark {
-    background-color: black;
-    color: white;
+.bg-dark,
+.btn-dark {
+  background-color: black;
+  color: white;
 }
-.bg-light, .btn-light {
-    background-color: lightblue;
-    color: white;
+.bg-light,
+.btn-light {
+  background-color: lightblue;
+  color: white;
 }
 
 /*TEXT SIZES OF BUTTON IN THE SHOW PREVIEW OF FRUITS AND VEGEIES*/
-.lead{
-    font-size: 20px;
+.lead {
+  font-size: 20px;
 }
-.sm{
-    font-size: 1rem ;
+.sm {
+  font-size: 1rem;
 }
-.md{
-    font-size: 3rem;
+.md {
+  font-size: 3rem;
 }
-.lg{
-    font-size: 3rem;
+.lg {
+  font-size: 3rem;
 }
-.xl{
-    font-size: 4rem;
-}
-
-.text-center{
-    text-align: center;
+.xl {
+  font-size: 4rem;
 }
 
-.flex{
-    display: flex;
-    /*between the flex item*/
-    justify-content: space-between;
-    align-items: center;
-    height: 100%;
+.text-center {
+  text-align: center;
+}
+
+.flex {
+  display: flex;
+  /*between the flex item*/
+  justify-content: space-between;
+  align-items: center;
+  height: 100%;
 }
 /*Define how wide they get*/
 /*fr = fraction*/
-.grid{
-    display: grid;
-    grid-template-columns: 2fr 1fr;
-    gap: 20px;
-    justify-content: center;
-    align-items: center;
-    height: 100%;
+.grid {
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+  gap: 20px;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
 }
 /*Will put 3 grids for the moment can add more later*/
-.grid-3{
-    grid-template-columns: repeat(3,1fr);
+.grid-3 {
+  grid-template-columns: repeat(3, 1fr);
 }
 
 /*Margin*/
-.my-1{
-    /*Multiplier of the html font size */
-    margin: 1rem 0;
+.my-1 {
+  /*Multiplier of the html font size */
+  margin: 1rem 0;
 }
-.my-2{
-    margin: 1.5rem 0;
+.my-2 {
+  margin: 1.5rem 0;
 }
-.my-3{
-    margin: 2rem 0;
+.my-3 {
+  margin: 2rem 0;
 }
-.my-4{
-    margin: 3rem 0;
+.my-4 {
+  margin: 3rem 0;
 }
-.my-5{
-    margin: 4rem 0;
+.my-5 {
+  margin: 4rem 0;
 }
-.py-1{
-    /*Multiplier of the html font size */
-    margin: 1rem;
+.py-1 {
+  /*Multiplier of the html font size */
+  margin: 1rem;
 }
-.m-2{
-    margin: 1.5rem;
+.m-2 {
+  margin: 1.5rem;
 }
-.m-3{
-    margin: 2rem;
+.m-3 {
+  margin: 2rem;
 }
-.m-4{
-    margin: 3rem;
+.m-4 {
+  margin: 3rem;
 }
-.m-5{
-    margin: 4rem;
+.m-5 {
+  margin: 4rem;
 }
 
 /*Padding*/
-.py-1{
-    /*Multiplier of the html font size */
-    padding: 1rem 0;
+.py-1 {
+  /*Multiplier of the html font size */
+  padding: 1rem 0;
 }
-.py-2{
-    padding: 1.5rem 0;
+.py-2 {
+  padding: 1.5rem 0;
 }
-.py-3{
-    padding: 2rem 0;
+.py-3 {
+  padding: 2rem 0;
 }
-.py-4{
-    padding: 3rem 0;
+.py-4 {
+  padding: 3rem 0;
 }
-.py-55{
-    padding: 4rem 0;
+.py-55 {
+  padding: 4rem 0;
 }
-.p-1{
-    /*Multiplier of the html font size */
-    padding: 1rem;
+.p-1 {
+  /*Multiplier of the html font size */
+  padding: 1rem;
 }
-.p-2{
-    padding: 1.5rem;
+.p-2 {
+  padding: 1.5rem;
 }
-.p-3{
-    padding: 2rem;
+.p-3 {
+  padding: 2rem;
 }
-.p-4{
-    padding: 3rem;
+.p-4 {
+  padding: 3rem;
 }
-.p-55{
-    padding: 4rem;
+.p-55 {
+  padding: 4rem;
 }
 
 /*FOOTER */
-.footer{
-    background-color: var(--primary-color);
-    color: white;
-    height: 70px;
+.footer {
+  background-color: var(--primary-color);
+  color: white;
+  height: 70px;
 }
-.footer a{
-    color: #ffff;
-    padding: 10px;
-    margin: 0 5px;
+.footer a {
+  color: #ffff;
+  padding: 10px;
+  margin: 0 5px;
 }
-.footer p{
-    text-align: center;
+.footer p {
+  text-align: center;
 }
-.footer a:hover{
-    border-bottom: 2px #fff solid;
+.footer a:hover {
+  border-bottom: 2px #fff solid;
 }
-.footer .flex{
-    justify-content: space-between;
+.footer .flex {
+  justify-content: space-between;
 }
 
 /*Social Media*/
-.socialmedia .grid{
-    grid-template-columns: repeat(3,1fr);
+.socialmedia .grid {
+  grid-template-columns: repeat(3, 1fr);
 }
 
 /*FOOD MENU CARD*/
-.cloud.grid{
-    grid-template-columns: 4fr 3fr;
+.cloud.grid {
+  grid-template-columns: 4fr 3fr;
 }
-
 
 /*FOOTER*/
-.footer{
-    overflow: visible;
-    height: 100px;
+.footer {
+  overflow: visible;
+  height: 100px;
 }
-.footer a{
-    margin: 0 10px;
+.footer a {
+  margin: 0 10px;
 }
-.footer .social a{
-    margin: 0 10px;
+.footer .social a {
+  margin: 0 10px;
 }
 
 .category .flex {
-    flex-wrap: wrap;
-
+  flex-wrap: wrap;
 }
 
 .category .card {
-    text-align: center;
-    margin: 18px 10px 40px;
-    transition: transform 0.2s ease-in;
+  text-align: center;
+  margin: 18px 10px 40px;
+  transition: transform 0.2s ease-in;
 }
-.category .card h4{
-    font-size: 20px;
+.category .card h4 {
+  font-size: 20px;
 }
-.category .card:hover{
-   /* HOVERS UP*/
-   transform: translateY(-15px);
+.category .card:hover {
+  /* HOVERS UP*/
+  transform: translateY(-15px);
 }
 /*FOR THE TABLES AND IPHONE*/
-@media(max-width: 768px) {
-    .grid,
-    .showcase .grid,
-    .category .grid,
-    .cloud .grid {
-        grid-template-columns: 1fr;
-        grid-template-rows: 1fr;
-    }
+@media (max-width: 768px) {
+  .grid,
+  .showcase .grid,
+  .category .grid,
+  .cloud .grid {
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr;
+  }
 
-    .showcase{
-        height: auto;
-
-    }
-    .showcase-text {
-        text-align: center;
-        margin-top: 40px;
-    }
-    .showcase-form{
-        justify-self: center;
-        margin: auto;
-    }
+  .showcase {
+    height: auto;
+  }
+  .showcase-text {
+    text-align: center;
+    margin-top: 40px;
+  }
+  .showcase-form {
+    justify-self: center;
+    margin: auto;
+  }
 }
-@media(max-width: 500px) {
-    .navbar{
-        height: 110px;
-    }
-    .navbar .flex{
-        flex-direction: column;
-    }
-    .navbar ul{
-        padding: 10px;
-        background-color: skyblue;
-    }
+@media (max-width: 500px) {
+  .navbar {
+    height: 110px;
+  }
+  .navbar .flex {
+    flex-direction: column;
+  }
+  .navbar ul {
+    padding: 10px;
+    background-color: skyblue;
+  }
 }
-
 
 /*FRUITS AND VEGESS*/
-.product .box-container{
-    display: flex;
-    flex-wrap: wrap;
-    gap: 1.5rem;
-
+.product .box-container {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1.5rem;
 }
-.product .box-container .box{
-    flex: 1 1 30rem;
-    flex-wrap: wrap;
-   padding: 2rem;
-    border: 1rem solid var(--primary-color);
-    border-radius: 0.5rem;
-    overflow: hidden;
-    position: relative;
-    justify-content: space-between;
+.product .box-container .box {
+  flex: 1 1 30rem;
+  flex-wrap: wrap;
+  padding: 2rem;
+  border: 1rem solid var(--primary-color);
+  border-radius: 0.5rem;
+  overflow: hidden;
+  position: relative;
+  justify-content: space-between;
 }
-.product .box-container .box .discount{
-    position: absolute;
-    top: 1rem;
-    left: 1rem;
-    background:  rgba(0,0,0,0.3);
-    font-size: 2rem;
+.product .box-container .box .discount {
+  position: absolute;
+  top: 1rem;
+  left: 1rem;
+  background: rgba(0, 0, 0, 0.3);
+  font-size: 2rem;
 }
 .product .heading {
-    font-size: 30px;
+  font-size: 30px;
 }
