--- a/components/Pages/admin.html
+++ b/components/Pages/admin.html
@@ -6,7 +6,7 @@
       name="viewport"
       content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
     />
-    <link rel="stylesheet" href="../../css/index.css" />
+    <link rel="stylesheet" href="../../../css/index.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css"
@@ -15,12 +15,13 @@
       referrerpolicy="no-referrer"
     />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Al-Sham</title>
+    <title>Al-Sham </title>
   </head>
   <body>
+    <!--Navbar-->
     <div class="navbar">
       <div class="container flex">
-        <h1 class="logo">Al-Sham</h1>
+        <h1 class="logo">Al-Sham </h1>
         <nav>
           <ul>
             <li><a href="home.html">Home</a></li>
@@ -34,55 +35,65 @@
       </div>
     </div>
 
-    <div class="container">
-      <h2 class="text-center">Login</h2>
-      <div class="text-center">
-        <form class="form">
-          <div class="form-control">
-            <input type="email2" name="email2" placeholder="Email" required />
+    <!--ShowCase-->
+    <section class="category">
+      <div class="container">
+        <div class="md text-center my-2">Admin Page</div>
+        <div class="container flex">
+          
+          <a href="orders.html">
+          <div  class="card btn">
+            <h4>Orders</h4>
+            <i class="fab fa-first-order"></i>
           </div>
-          <div class="form-control">
-            <input
-              type="password"
-              name="password"
-              placeholder="password"
-              required
-              minlength="4"
-              maxlength="8"
-              size="10"
-            />
+        </a>
+
+          <a href="viewproducts.html">
+            <div class="card btn">
+              <h4>View Prodcuts</h4>
+              <i class="fas fa-eye"></i>
+            </div>
+          </a>
+          
+          <a href="addproduct.html">
+          <div class="card btn">
+            <h4>Add Products</h4>
+            <i class="fa fa-plus" ></i>
           </div>
-          <div class="form-control">
-            <input
-              type="password"
-              name="password"
-              placeholder="Confirm password"
-              required
-              minlength="4"
-              maxlength="8"
-              size="10"
-            />
+        </a>
+
+        <a href="users.html">
+          <div class="card btn">
+            <h4>Users</h4>
+            <i class="fas fa-user"></i>
           </div>
-          <input type="submit" value="Send" class="btn btn-primary" />
-        </form>
-        <p>Forgot passwowrd? <a href="#">Click here</a></p>
+        </a>
+
+        
+          </div>
+        </div>
       </div>
-    </div>
-    <section>
-      <br />
-      <br />
-      <br />
-      <br />
-      <br />
-      <br />
-      <br />
-      <br />
-      <br />
-      <br />
-      <br />
-      <br />
-      <br />
     </section>
+
+    <section>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      
+    </section>
+    
+    <!--   FOOTER     -->
     <footer class="footer bg-dark py-5">
       <div class="container grid grid-3">
         <div>
