--- a/components/Pages/aisles/Snacks.html
+++ b/components/Pages/aisles/Snacks.html
@@ -37,75 +37,92 @@
 
     <!--ShowCase-->
     <section>
-      <div class="md text-center my-2">Fruits and Vegetables</div>
+      <div class="md text-center my-2">Snacks</div>
     </section>
 
     <section class="product my-2 py-2">
-      <h1 class="heading">Our latest Fruits and Vegetables</h1>
+      <h1 class="heading">Our latest Snacks</h1>
       <div class="box-container my-2 py-2">
         <div class="box">
-          <img src="../../../images/banana.jpg" alt="Bananas" />
-          <h3>Bananas</h3>
+          <img
+            src="../../../images/snackImages/doritos_nacho_cheese.jpeg"
+            alt="Doritos Nachos Cheese"
+          />
+          <h3>Doritos Nachos Cheese</h3>
           <div class="price">$0.99 <span>tax not included</span></div>
+          <li>Doritos Nacho Cheese Tortilla- Flavoury cheese nachos (235g)</li>
           <div class="quantity">
             <span>Quantity: </span>
             <input type="number" min="1" max="100" value="1" />
-            <span>/pounds</span>
-          </div>
-          <a href="#" class="btn">add to cart</a>
-        </div>
-        <!--TOMATOES-->
-        <div class="box">
-          <img src="../../../images/mango.jpg" alt="Mango" />
-          <h3>Mango</h3>
-          <div class="price">$0.99 <span>tax not included</span></div>
-          <div class="quantity">
-            <span>Quantity: </span>
-            <input type="number" min="1" max="100" value="1" />
-            <span>/pounds</span>
+            <span>/unit</span>
           </div>
           <a href="#" class="btn">add to cart</a>
         </div>
 
         <div class="box">
-          <img src="../../../images/orange.jpg" alt="Orange" />
-          <h3>Orange</h3>
+          <img
+            src="../../../images/snackImages/lays_classic.jpeg"
+            alt="Lays Classis"
+          />
+          <h3>Lays Classis</h3>
           <div class="price">$0.99 <span>tax not included</span></div>
+          <li>Lay's Classic Potato Chips - Classic Lays Chips (235g)</li>
           <div class="quantity">
             <span>Quantity: </span>
             <input type="number" min="1" max="100" value="1" />
-            <span>/pounds</span>
+            <span>/unit</span>
           </div>
           <a href="#" class="btn">add to cart</a>
         </div>
 
         <div class="box">
-          <img src="../../../images/cucumber.jpg" alt="Cucumber" />
-          <h3>Cucumber</h3>
+          <img
+            src="../../../images/snackImages//flaming_hot_cheetos.png"
+            alt="Flaming Hot Cheetos"
+          />
+          <h3>Flaming Hot Cheetos</h3>
           <div class="price">$0.99 <span>tax not included</span></div>
           <div class="quantity">
             <span>Quantity: </span>
             <input type="number" min="1" max="100" value="1" />
-            <span>/pounds</span>
+            <span>/unit</span>
           </div>
           <a href="#" class="btn">add to cart</a>
         </div>
 
         <div class="box">
-          <img src="../../../images/tomatoe.jpg" alt="Tomatoes" />
-          <h3>Tomatoes</h3>
+          <img src="../../../images/snackImages/kitkat.png" alt="Kitkat" />
+          <h3>Kitkat</h3>
           <div class="price">$0.99 <span>tax not included</span></div>
+          <li>Kitkat 4-Finger Milk Chocolate Bar (45g)</li>
           <div class="quantity">
             <span>Quantity: </span>
             <input type="number" min="1" max="100" value="1" />
-            <span>/pounds</span>
+            <span>/unit</span>
+          </div>
+          <a href="#" class="btn">add to cart</a>
+        </div>
+
+        <div class="box">
+          <img src="../../../images/snackImages/aero.jpeg" alt="Aero" />
+          <h3>Aero</h3>
+          <div class="price">$0.99 <span>tax not included</span></div>
+          <li>Aero Milk chocolate Candy Bar (42g)</li>
+          <div class="quantity">
+            <span>Quantity: </span>
+            <input type="number" min="1" max="100" value="1" />
+            <span>/unit</span>
           </div>
           <a href="#" class="btn">add to cart</a>
         </div>
         <div class="box">
-          <img src="../../../images/onions.jpg" alt="Onions" />
-          <h3>Onions</h3>
+          <img
+            src="../../../images/snackImages/snicnkers.jpeg"
+            alt="Snickers"
+          />
+          <h3>Snickers</h3>
           <div class="price">$0.99 <span>tax not included</span></div>
+          <li>Snickers Chocolate Candy Bar (57g)</li>
           <div class="quantity">
             <span>Quantity: </span>
             <input type="number" min="1" max="100" value="1" />
