--- a/components/Pages/aisles/eggsAndDairy.html
+++ b/components/Pages/aisles/eggsAndDairy.html
@@ -37,75 +37,114 @@
 
     <!--ShowCase-->
     <section>
-      <div class="md text-center my-2">Fruits and Vegetables</div>
+      <div class="md text-center my-2">Eggs & Dairy</div>
     </section>
 
     <section class="product my-2 py-2">
-      <h1 class="heading">Our latest Fruits and Vegetables</h1>
+      <h1 class="heading">Our latest Eggs & Dairy</h1>
       <div class="box-container my-2 py-2">
         <div class="box">
-          <img src="../../../images/banana.jpg" alt="Bananas" />
-          <h3>Bananas</h3>
-          <div class="price">$0.99 <span>tax not included</span></div>
+          <img
+            src="../../../images/eggsAndMilkImages/chedderChesse.jpg"
+            alt="Chedder Cheese"
+          />
+          <h3>Chedder Cheese</h3>
+          <div class="price">$30.99 <span>tax not included</span></div>
+          <li>
+            Cheddar cheese is one of those unique cheeses that can be called
+            sharp and extra sharp.
+          </li>
           <div class="quantity">
             <span>Quantity: </span>
             <input type="number" min="1" max="100" value="1" />
-            <span>/pounds</span>
-          </div>
-          <a href="#" class="btn">add to cart</a>
-        </div>
-        <!--TOMATOES-->
-        <div class="box">
-          <img src="../../../images/mango.jpg" alt="Mango" />
-          <h3>Mango</h3>
-          <div class="price">$0.99 <span>tax not included</span></div>
-          <div class="quantity">
-            <span>Quantity: </span>
-            <input type="number" min="1" max="100" value="1" />
-            <span>/pounds</span>
+            <span>/unit</span>
           </div>
           <a href="#" class="btn">add to cart</a>
         </div>
 
         <div class="box">
-          <img src="../../../images/orange.jpg" alt="Orange" />
-          <h3>Orange</h3>
-          <div class="price">$0.99 <span>tax not included</span></div>
+          <img
+            src="../../../images/eggsAndMilkImages/eggs.jpg"
+            alt="Classic Brown Eggs"
+          />
+          <h3>Classic Brown Eggs</h3>
+          <div class="price">$7.99 <span>tax not included</span></div>
+          <li>
+            The brown eggs are bigger in size and the yolk of the egg is darker
+            than the white variant.
+          </li>
           <div class="quantity">
             <span>Quantity: </span>
-            <input type="number" min="1" max="100" value="1" />
-            <span>/pounds</span>
+            <input type="number" min="7" max="100" value="7" />
+            <span>/pack</span>
           </div>
           <a href="#" class="btn">add to cart</a>
         </div>
 
         <div class="box">
-          <img src="../../../images/cucumber.jpg" alt="Cucumber" />
-          <h3>Cucumber</h3>
-          <div class="price">$0.99 <span>tax not included</span></div>
+          <img
+            src="../../../images/eggsAndMilkImages/icecream.jpg"
+            alt="Vanilla Ice Cream"
+          />
+          <h3>Vanilla Ice Cream</h3>
+          <div class="price">$4.99 <span>tax not included</span></div>
+          <li>
+            Vanilla ice cream is made by blending in vanilla essence in along
+            with the eggs (optional), cream, milk and sugar.
+          </li>
+          <li>
+            Vanilla is a great essence that gives a great aroma and light taste
+          </li>
           <div class="quantity">
             <span>Quantity: </span>
             <input type="number" min="1" max="100" value="1" />
-            <span>/pounds</span>
+            <span>/unit</span>
           </div>
           <a href="#" class="btn">add to cart</a>
         </div>
 
         <div class="box">
-          <img src="../../../images/tomatoe.jpg" alt="Tomatoes" />
-          <h3>Tomatoes</h3>
-          <div class="price">$0.99 <span>tax not included</span></div>
+          <img
+            src="../../../images/eggsAndMilkImages/milk.jpg"
+            alt="White Milk"
+          />
+          <h3>White Milk</h3>
+          <div class="price">$2.99 <span>tax not included</span></div>
+          <li>Including fat and protein</li>
+          <li>A great source of nutrition</li>
           <div class="quantity">
             <span>Quantity: </span>
             <input type="number" min="1" max="100" value="1" />
-            <span>/pounds</span>
+            <span>/unit</span>
+          </div>
+          <a href="#" class="btn">add to cart</a>
+        </div>
+
+        <div class="box">
+          <img
+            src="../../../images/eggsAndMilkImages/qualieggs.jpg"
+            alt="Quail Eggs"
+          />
+          <h3>Quail Eggs</h3>
+          <div class="price">$1.99 <span>tax not included</span></div>
+          <li>Rich, deep yellow yolks</li>
+          <li>Contain a great source of fat and protien</li>
+          <div class="quantity">
+            <span>Quantity: </span>
+            <input type="number" min="1" max="100" value="1" />
+            <span>/unit</span>
           </div>
           <a href="#" class="btn">add to cart</a>
         </div>
         <div class="box">
-          <img src="../../../images/onions.jpg" alt="Onions" />
-          <h3>Onions</h3>
-          <div class="price">$0.99 <span>tax not included</span></div>
+          <img
+            src="../../../images/eggsAndMilkImages/swissCheese.jpg"
+            alt="Swiss Cheese"
+          />
+          <h3>Swiss Cheese</h3>
+          <div class="price">$2.99 <span>tax not included</span></div>
+          <li>Great firm texture , mild and smooth</li>
+          <li>Can be used to cook in sandwiches and pasta</li>
           <div class="quantity">
             <span>Quantity: </span>
             <input type="number" min="1" max="100" value="1" />
