--- a/components/Pages/adduser.html
+++ b/components/Pages/adduser.html
@@ -6,7 +6,7 @@
       name="viewport"
       content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
     />
-    <link rel="stylesheet" href="../../css/index.css" />
+    <link rel="stylesheet" href="../../../css/index.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css"
@@ -18,6 +18,7 @@
     <title>Al-Sham</title>
   </head>
   <body>
+    <!--Navbar-->
     <div class="navbar">
       <div class="container flex">
         <h1 class="logo">Al-Sham</h1>
@@ -34,55 +35,57 @@
       </div>
     </div>
 
-    <div class="container">
-      <h2 class="text-center">Login</h2>
-      <div class="text-center">
-        <form class="form">
-          <div class="form-control">
-            <input type="email2" name="email2" placeholder="Email" required />
-          </div>
-          <div class="form-control">
-            <input
-              type="password"
-              name="password"
-              placeholder="password"
-              required
-              minlength="4"
-              maxlength="8"
-              size="10"
-            />
-          </div>
-          <div class="form-control">
-            <input
-              type="password"
-              name="password"
-              placeholder="Confirm password"
-              required
-              minlength="4"
-              maxlength="8"
-              size="10"
-            />
-          </div>
-          <input type="submit" value="Send" class="btn btn-primary" />
-        </form>
-        <p>Forgot passwowrd? <a href="#">Click here</a></p>
-      </div>
-    </div>
-    <section>
-      <br />
-      <br />
-      <br />
-      <br />
-      <br />
-      <br />
-      <br />
-      <br />
-      <br />
-      <br />
-      <br />
-      <br />
-      <br />
+    
+
+    <!--ShowCase-->
+    <section class="category">
+      <div class="container">
+        <div class="md text-center my-2">Add a User Page</div>
+        <div class="container flex-center">
+            <div>
+                
+                  <a href="#">
+                    <div class="btn text-center">
+                      <h4>Save</h4>
+                      <i class="fas fa-save"></i>
+                    </div>
+                  </a>
+    
+                    <a href="#">
+                      <div class="btn text-center">
+                        <h4>Refresh</h4>
+                        <i class="fa fa-refresh"></i>
+                      </div>
+                    </a>
+                </div>
+            <section class="cloud bg-primary my-2 py-2">
+                <div class="container grid">
+                  <div class="text-center">
+                <h2 class="text-center">Add the following details:</h2>
+                <div class="text-center">
+                <input type="number" placeholder="ID" required />  
+                <input type="username" placeholder="User Name" required />  
+                <input type="name" placeholder="First Name" required />  
+                <input type="name" placeholder="Last Name" required />  
+                <input type="email" placeholder="Email" required />  
+                    </div>
+              </section>
     </section>
+
+
+    <section>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+    </section>
+
+    <!--   FOOTER     -->
     <footer class="footer bg-dark py-5">
       <div class="container grid grid-3">
         <div>
