--- a/components/Pages/createAccount.html
+++ b/components/Pages/createAccount.html
@@ -1,57 +1,112 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <link rel="stylesheet" href="../../css/index.css">
-    <link rel="stylesheet"
-          href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css"
-          integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA=="
-          crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Grocery Store </title>
-</head>
-<body>
-
-<!--Navbar-->
-<div class="navbar">
-    <div class="container flex">
-        <h1 class="logo">Grocery Store</h1>
+  <head>
+    <meta charset="UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
+    />
+    <link rel="stylesheet" href="../../css/index.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css"
+      integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Al-Sham</title>
+  </head>
+  <body>
+    <!--Navbar-->
+    <div class="navbar">
+      <div class="container flex">
+        <h1 class="logo">Al-Sham</h1>
         <nav>
-            <ul>
-                <li><a href="home.html">Home</a></li>
-                <li><a href="aisles/aisles.html">Aisles</a>
-                </li>
-                <li><a href="login.html">User login</a></li>
-                <li><a href="productDescription.html">Product Description</a></li>
-                <li><a href="createAccount.html">Create account</a></li>
-                <li><a href="cart.html">Cart</a></li>
-            </ul>
+          <ul>
+            <li><a href="home.html">Home</a></li>
+            <li><a href="aisles/aisles.html">Aisles</a></li>
+            <li><a href="login.html">Login</a></li>
+            <li><a href="createAccount.html">Create Account</a></li>
+            <li><a href="admin.html">Admin</a></li>
+            <li><a href="cart.html">Cart</a></li>
+          </ul>
         </nav>
+      </div>
     </div>
 
-</div>
+    <div class="container">
+      <h2 class="text-center">Create Account</h2>
+      <div class="text-center">
+        <form class="form">
+          <div class="form-control">
+            <input
+              type="text"
+              name="firstName"
+              placeholder="First Name"
+              required
+            />
+          </div>
+          <div class="form-control">
+            <input
+              type="text"
+              name="lastName"
+              placeholder="Last Name"
+              required
+            />
+          </div>
+          <div class="form-control">
+            <input type="email2" name="email2" placeholder="Email" required />
+          </div>
+          <div class="form-control">
+            <input
+              type="password"
+              name="password"
+              placeholder="password"
+              required
+              minlength="4"
+              maxlength="8"
+              size="10"
+            />
+          </div>
+          <input type="submit" value="Send" class="btn btn-primary" />
+        </form>
+      </div>
+    </div>
 
-<div class="showcase-form card">
-    <h2>Create Account</h2>
-    <form>
-        <div class="form-control">
-            <input  type="text" name="name" placeholder="First Name" required>
+    <section>
+      <br />
+      <br />
+      <br />
+      <br />
+      <br />
+      <br />
+      <br />
+      <br />
+      <br />
+      <br />
+      <br />
+      <br />
+    </section>
+    <footer class="footer bg-dark py-5">
+      <div class="container grid grid-3">
+        <div>
+          <h1>Al-Sham</h1>
+          <p>Copyright &copy; 2021</p>
         </div>
-        <div class="form-control">
-            <input type="text" name="name" placeholder="Last Name" required>
+        <nav>
+          <ul>
+            <li><a href="home.html"></a>Home</li>
+            <li><a href="login.html"></a>Login</li>
+            <li><a href="createAccount.html"></a>Create Account</li>
+          </ul>
+        </nav>
+        <div class="social">
+          <a href="#"><i class="fab fa-twitter fa-2x"></i></a>
+          <a href="#"><i class="fab fa-facebook fa-2x"></i></a>
+          <a href="#"><i class="fab fa-instagram fa-2x"></i></a>
         </div>
-        <div class="form-control">
-            <input type="email" id="name" name="name" placeholder="Email" required>
-        </div>
-        <div class="form-control">
-            <input type="password" name="password" placeholder="password" required
-                   minlength="4" maxlength="8" size="10">
-        </div>
-        <input type="submit" value="Send" class ="btn btn-primary">
-
-    </form>
-</div>
-</body>
+      </div>
+    </footer>
+  </body>
 </html>
