--- a/css/index.css
+++ b/css/index.css
@@ -1,112 +1,111 @@
-@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap");
 
 /*Define the CSS property --> will be used all over*/
-:root{
-    --primary-color:skyblue;
+:root {
+  --primary-color: skyblue;
 }
-*{
-    box-sizing: border-box;
-    padding: 0;
-    margin: 0;
-}
-
-body{
-    font-family: 'Lato', sans-serif;
-    color: #333;
-    line-height: 1.6;
+* {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
 }
 
-ul{
-    list-style-type: none;
+body {
+  font-family: "Lato", sans-serif;
+  color: #333;
+  line-height: 1.6;
 }
 
-a{
-    text-decoration: none;
-    color: black;
+ul {
+  list-style-type: none;
 }
 
-h1,h2{
-    font-weight: 300 ;
-    line-height: 1.2;
-    margin: 10px 0;
+a {
+  text-decoration: none;
+  color: black;
 }
 
-p{
-    margin: 10px 0;
-
+h1,
+h2 {
+  font-weight: 300;
+  line-height: 1.2;
+  margin: 10px 0;
 }
-img{
-    width: 100%;
+
+p {
+  margin: 10px 0;
+}
+img {
+  width: 100%;
+
+  align-items: center;
 }
 /*Navbar styling*/
-.navbar{
-    background-color: var(--primary-color);
-    color: white;
-    height: 70px;
+.navbar {
+  background-color: var(--primary-color);
+  color: white;
+  height: 70px;
 }
-.navbar ul{
-    display: flex;
+.navbar ul {
+  display: flex;
 }
-.navbar a{
-    color: #ffff;
-    padding: 10px;
-    margin: 0 5px;
-}
-
-.navbar a:hover{
-    border-bottom: 2px #fff solid;
-}
-.navbar .flex{
-    justify-content: space-between;
+.navbar a {
+  color: #ffff;
+  padding: 10px;
+  margin: 0 5px;
 }
 
+.navbar a:hover {
+  border-bottom: 2px #fff solid;
+}
+.navbar .flex {
+  justify-content: space-between;
+}
 
 /*ShowCase*/
-.showcase{
-    height: 400px;
-    background-color: var(--primary-color) ;
-    color: white;
-    position: relative;
+.showcase {
+  height: 400px;
+  background-color: var(--primary-color);
+  color: white;
+  position: relative;
 }
-.showcase h1{
-    font-size: 40px;
+.showcase h1 {
+  font-size: 40px;
 }
-.showcase p{
-    margin: 20px 0;
+.showcase p {
+  margin: 20px 0;
 }
-.showcase.grid{
-    overflow: visible;
-    grid-template-columns: 55%  45%;
-    gap: 30px;
-
+.showcase.grid {
+  overflow: visible;
+  grid-template-columns: 55% 45%;
+  gap: 30px;
 }
-.showcase-form{
-    position: relative;
-    top: 60px;
-    height: 350px;
-    width: 400px;
-    padding: 40px;
-    z-index: 100;
-    justify-self: flex-end;
-}
-
-.showcase-form .form-control{
-    margin: 30px 0;
-}
-.showcase-form input[type='text'],
-.showcase-form input[type='email'],
-.showcase-form input[type = 'password']{
-    border: 0;
-    border-bottom: 1px solid #b4becb;
-    width: 100%;
-    padding: 3px;
-    font-size: 16px;
+.showcase-form {
+  position: relative;
+  top: 60px;
+  height: 350px;
+  width: 400px;
+  padding: 40px;
+  z-index: 100;
+  justify-self: flex-end;
 }
 
-.showcase-form input:focus{
-    outline: none;
+.showcase-form .form-control {
+  margin: 30px 0;
+}
+.showcase-form input[type="text"],
+.showcase-form input[type="email"],
+.showcase-form input[type="password"] {
+  border: 0;
+  border-bottom: 1px solid #b4becb;
+  width: 100%;
+  padding: 3px;
+  font-size: 16px;
 }
 
+.showcase-form input:focus {
+  outline: none;
+}
 
 /*.showcase::before,*/
 /*.showcase::after{*/
@@ -124,310 +123,533 @@ img{
 /*!*    -ms-transform: skewY(-3deg);*!*/
 /*}*/
 /*Category*/
-.category{
-    padding-top: 30px;
+.category {
+  padding-top: 30px;
 }
-.category-heading{
-    max-width: 500px;
-    margin: auto;
+.category-heading {
+  max-width: 500px;
+  margin: auto;
 }
-.category .grid p{
-    font-size: 20px;
-    font-weight: bold;
+.category .grid p {
+  font-size: 20px;
+  font-weight: bold;
 }
 /*Utilities --> Used all over the website*/
-.container{
-    max-width: 1100px;
-    margin: 0 auto;
-    overflow: auto;
-    padding: 0 40px;
+.container {
+  max-width: 1100px;
+  margin: 0 auto;
+  overflow: auto;
+  padding: 0 40px;
 }
-.card{
-    background-color: white;
-    color: #333;
-    border-radius: 10px;
-    box-shadow: 0 3px 10px rgba(0,0,0,0.2);
-    padding: 20px;
-    margin: 10px;
+.card {
+  background-color: white;
+  color: #333;
+  border-radius: 10px;
+  box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2);
+  padding: 20px;
+  margin: 10px;
 }
-.flex{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100%;
+.flex {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
 }
 
-.btn{
-    display: inline-block;
-    padding: 10px 30px;
-    cursor: pointer;
-    background-color: var(--primary-color);
-    color: white;
-    border: none;
-    border-radius: 5px;
+.btn {
+  display: inline-block;
+  padding: 10px 30px;
+  cursor: pointer;
+  background-color: var(--primary-color);
+  color: white;
+  border: none;
+  border-radius: 5px;
 }
 .btn-outline {
   background-color: transparent;
   border: 1px white solid;
 }
-.text-center{
-    text-align: center;
+.text-center {
+  text-align: center;
 }
-.btn:hover{
-    transform: scale(0.98);
+.btn:hover {
+  transform: scale(0.98);
 }
 
 /*Background and Adding the colors to buttons*/
-.bg-primary, .btn-primary {
-    background-color: var(--primary-color);
-    color: white;
+.bg-primary,
+.btn-primary {
+  background-color: var(--primary-color);
+  color: white;
 }
-.bg-secondary, .btn-secondary {
-    background-color: darkblue;
-    color: white;
+.bg-secondary,
+.btn-secondary {
+  background-color: darkblue;
+  color: white;
 }
-.bg-dark, .btn-dark {
-    background-color: black;
-    color: white;
+.bg-dark,
+.btn-dark {
+  background-color: black;
+  color: white;
 }
-.bg-light, .btn-light {
-    background-color: lightblue;
-    color: white;
+.bg-light,
+.btn-light {
+  background-color: lightblue;
+  color: white;
 }
 
 /*TEXT SIZES OF BUTTON IN THE SHOW PREVIEW OF FRUITS AND VEGEIES*/
-.lead{
-    font-size: 20px;
+.lead {
+  font-size: 20px;
 }
-.sm{
-    font-size: 1rem ;
+.sm {
+  font-size: 1rem;
 }
-.md{
-    font-size: 3rem;
+.md {
+  font-size: 3rem;
 }
-.lg{
-    font-size: 3rem;
+.lg {
+  font-size: 3rem;
 }
-.xl{
-    font-size: 4rem;
-}
-
-.text-center{
-    text-align: center;
+.xl {
+  font-size: 4rem;
 }
 
-.flex{
-    display: flex;
-    /*between the flex item*/
-    justify-content: space-between;
-    align-items: center;
-    height: 100%;
+.text-center {
+  text-align: center;
+}
+
+.flex {
+  display: flex;
+  /*between the flex item*/
+  justify-content: space-between;
+  align-items: center;
+  height: 100%;
 }
 /*Define how wide they get*/
 /*fr = fraction*/
-.grid{
-    display: grid;
-    grid-template-columns: 2fr 1fr;
-    gap: 20px;
-    justify-content: center;
-    align-items: center;
-    height: 100%;
+.grid {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 20px;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
 }
 /*Will put 3 grids for the moment can add more later*/
-.grid-3{
-    grid-template-columns: repeat(3,1fr);
+.grid-3 {
+  grid-template-columns: repeat(3, 1fr);
 }
 
 /*Margin*/
-.my-1{
-    /*Multiplier of the html font size */
-    margin: 1rem 0;
+.my-1 {
+  /*Multiplier of the html font size */
+  margin: 1rem 0;
 }
-.my-2{
-    margin: 1.5rem 0;
+.my-2 {
+  margin: 1.5rem 0;
 }
-.my-3{
-    margin: 2rem 0;
+.my-3 {
+  margin: 2rem 0;
 }
-.my-4{
-    margin: 3rem 0;
+.my-4 {
+  margin: 3rem 0;
 }
-.my-5{
-    margin: 4rem 0;
+.my-5 {
+  margin: 4rem 0;
 }
-.py-1{
-    /*Multiplier of the html font size */
-    margin: 1rem;
+.py-1 {
+  /*Multiplier of the html font size */
+  margin: 1rem;
 }
-.m-2{
-    margin: 1.5rem;
+.m-2 {
+  margin: 1.5rem;
 }
-.m-3{
-    margin: 2rem;
+.m-3 {
+  margin: 2rem;
 }
-.m-4{
-    margin: 3rem;
+.m-4 {
+  margin: 3rem;
 }
-.m-5{
-    margin: 4rem;
+.m-5 {
+  margin: 4rem;
 }
 
 /*Padding*/
-.py-1{
-    /*Multiplier of the html font size */
-    padding: 1rem 0;
+.py-1 {
+  /*Multiplier of the html font size */
+  padding: 1rem 0;
 }
-.py-2{
-    padding: 1.5rem 0;
+.py-2 {
+  padding: 1.5rem 0;
 }
-.py-3{
-    padding: 2rem 0;
+.py-3 {
+  padding: 2rem 0;
 }
-.py-4{
-    padding: 3rem 0;
+.py-4 {
+  padding: 3rem 0;
 }
-.py-55{
-    padding: 4rem 0;
+.py-55 {
+  padding: 4rem 0;
 }
-.p-1{
-    /*Multiplier of the html font size */
-    padding: 1rem;
+.p-1 {
+  /*Multiplier of the html font size */
+  padding: 1rem;
 }
-.p-2{
-    padding: 1.5rem;
+.p-2 {
+  padding: 1.5rem;
 }
-.p-3{
-    padding: 2rem;
+.p-3 {
+  padding: 2rem;
 }
-.p-4{
-    padding: 3rem;
+.p-4 {
+  padding: 3rem;
 }
-.p-55{
-    padding: 4rem;
+.p-55 {
+  padding: 4rem;
 }
 
 /*FOOTER */
-.footer{
-    background-color: var(--primary-color);
-    color: white;
-    height: 70px;
+.footer {
+  background-color: var(--primary-color);
+  color: white;
+  height: 70px;
 }
-.footer a{
-    color: #ffff;
-    padding: 10px;
-    margin: 0 5px;
+.footer a {
+  color: #ffff;
+  padding: 10px;
+  margin: 0 5px;
 }
-.footer p{
-    text-align: center;
+.footer p {
+  text-align: center;
 }
-.footer a:hover{
-    border-bottom: 2px #fff solid;
+.footer a:hover {
+  border-bottom: 2px #fff solid;
 }
-.footer .flex{
-    justify-content: space-between;
+.footer .flex {
+  justify-content: space-between;
 }
 
 /*Social Media*/
-.socialmedia .grid{
-    grid-template-columns: repeat(3,1fr);
+.socialmedia .grid {
+  grid-template-columns: repeat(3, 2fr);
 }
 
 /*FOOD MENU CARD*/
-.cloud.grid{
-    grid-template-columns: 4fr 3fr;
+.cloud.grid {
+  grid-template-columns: 3fr 1fr;
 }
-
 
 /*FOOTER*/
-.footer{
-    overflow: visible;
-    height: 100px;
+.footer {
+  overflow: visible;
+  height: 100px;
 }
-.footer a{
-    margin: 0 10px;
+.footer a {
+  margin: 0 10px;
 }
-.footer .social a{
-    margin: 0 10px;
+.footer .social a {
+  margin: 0 10px;
 }
 
 .category .flex {
-    flex-wrap: wrap;
-
+  flex-wrap: wrap;
 }
 
 .category .card {
-    text-align: center;
-    margin: 18px 10px 40px;
-    transition: transform 0.2s ease-in;
+  text-align: center;
+  margin: 18px 10px 40px;
+  transition: transform 0.2s ease-in;
 }
-.category .card h4{
-    font-size: 20px;
+.category .card h4 {
+  font-size: 20px;
 }
-.category .card:hover{
-   /* HOVERS UP*/
-   transform: translateY(-15px);
+.category .card:hover {
+  /* HOVERS UP*/
+  transform: translateY(-15px);
 }
 /*FOR THE TABLES AND IPHONE*/
-@media(max-width: 768px) {
-    .grid,
-    .showcase .grid,
-    .category .grid,
-    .cloud .grid {
-        grid-template-columns: 1fr;
-        grid-template-rows: 1fr;
-    }
+@media (max-width: 768px) {
+  .grid,
+  .showcase .grid,
+  .category .grid,
+  .cloud .grid {
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr;
+  }
 
-    .showcase{
-        height: auto;
-
-    }
-    .showcase-text {
-        text-align: center;
-        margin-top: 40px;
-    }
-    .showcase-form{
-        justify-self: center;
-        margin: auto;
-    }
+  .showcase {
+    height: auto;
+  }
+  .showcase-text {
+    text-align: center;
+    margin-top: 40px;
+  }
+  .showcase-form {
+    justify-self: center;
+    margin: auto;
+  }
 }
-@media(max-width: 500px) {
-    .navbar{
-        height: 110px;
-    }
-    .navbar .flex{
-        flex-direction: column;
-    }
-    .navbar ul{
-        padding: 10px;
-        background-color: skyblue;
-    }
+@media (max-width: 500px) {
+  .navbar {
+    height: 110px;
+  }
+  .navbar .flex {
+    flex-direction: column;
+  }
+  .navbar ul {
+    padding: 10px;
+    background-color: skyblue;
+  }
 }
-
 
 /*FRUITS AND VEGESS*/
-.product .box-container{
-    display: flex;
-    flex-wrap: wrap;
-    gap: 1.5rem;
-
+.product .box-container {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1.5rem;
 }
-.product .box-container .box{
-    flex: 1 1 30rem;
-    flex-wrap: wrap;
-   padding: 2rem;
-    border: 1rem solid var(--primary-color);
-    border-radius: 0.5rem;
-    overflow: hidden;
-    position: relative;
-    justify-content: space-between;
+.product .box-container .box {
+  flex: 1 1 30rem;
+  flex-wrap: wrap;
+  padding: 2rem;
+  border: 1rem solid var(--primary-color);
+  border-radius: 0.5rem;
+  overflow: hidden;
+  position: relative;
+  justify-content: space-between;
 }
-.product .box-container .box .discount{
-    position: absolute;
-    top: 1rem;
-    left: 1rem;
-    background:  rgba(0,0,0,0.3);
-    font-size: 2rem;
+.product .box-container .box .discount {
+  position: absolute;
+  top: 1rem;
+  left: 1rem;
+  background: rgba(0, 0, 0, 0.3);
+  font-size: 2rem;
 }
 .product .heading {
-    font-size: 30px;
+  font-size: 30px;
+}
+
+/* SHOPPING CART */
+.shopping-cart {
+  width: 750px;
+  height: 423px;
+  margin: 80px auto;
+  background: #ffffff;
+  box-shadow: 1px 2px 3px 0px rgba(0, 0, 0, 0.1);
+  border-radius: 6px;
+
+  display: flex;
+  flex-direction: column;
+}
+
+.item {
+  padding: 20px 30px;
+  height: 120px;
+  display: flex;
+}
+
+.item:nth-child(3) {
+  border-top: 1px solid #e1e8ee;
+  border-bottom: 1px solid #e1e8ee;
+}
+
+.buttons {
+  position: relative;
+  padding-top: 30px;
+  margin-right: 60px;
+}
+.delete-btn,
+.like-btn {
+  display: inline-block;
+  cursor: pointer;
+}
+.delete-btn {
+  width: 18px;
+  height: 17px;
+}
+
+.like-btn {
+  position: absolute;
+  top: 9px;
+  left: 15px;
+  background: url("twitter-heart.png");
+  width: 60px;
+  height: 60px;
+  background-size: 2900%;
+  background-repeat: no-repeat;
+}
+
+.delete-btn,
+.like-btn {
+  display: inline-block;
+  cursor: pointer;
+}
+.delete-btn {
+  width: 18px;
+  height: 17px;
+}
+
+/* .is-active {
+  animation-name: animate;
+  animation-duration: 0.8s;
+  animation-iteration-count: 1;
+  animation-timing-function: steps(28);
+  animation-fill-mode: forwards;
+}
+
+@keyframes animate {
+  0% {
+    background-position: left;
+  }
+  50% {
+    background-position: right;
+  }
+  100% {
+    background-position: right;
+  }
+} */
+
+/* .like-btn {
+  position: absolute;
+  top: 9px;
+  left: 15px;
+  background: url("twitter-heart.png");
+  width: 60px;
+  height: 60px;
+  background-size: 2900%;
+  background-repeat: no-repeat;
+} */
+
+.image {
+  margin-right: 50px;
+}
+
+/* .description {
+  padding-top: 10px;
+  margin-right: 60px;
+  width: 115px;
+} */
+
+/* .description span {
+  display: block;
+  font-size: 14px;
+  color: #43484d;
+  font-weight: 400;
+} */
+
+/* .description span:first-child {
+  margin-bottom: 5px;
+}
+.description span:last-child {
+  font-weight: 300;
+  margin-top: 8px;
+  color: #86939e;
+} */
+
+.quantity {
+  padding-top: 20px;
+  margin-right: 60px;
+}
+/* .quantity input {
+  -webkit-appearance: none;
+  border: none;
+  text-align: center;
+  width: 32px;
+  font-size: 16px;
+  color: #43484d;
+  font-weight: 300;
+} */
+
+button[class*="btn"] {
+  width: 30px;
+  height: 30px;
+  background-color: #e1e8ee;
+  border-radius: 6px;
+  border: none;
+  cursor: pointer;
+}
+.minus-btn img {
+  margin-bottom: px;
+}
+.plus-btn img {
+  margin-top: 2px;
+}
+
+button:focus,
+input:focus {
+  outline: 0;
+}
+.total-price {
+  width: 83px;
+  padding-top: 27px;
+  text-align: center;
+  font-size: 16px;
+  color: #43484d;
+  font-weight: 300;
+}
+
+.imagesCart {
+  width: 100px;
+  height: 100px;
+  margin: 80px auto;
+}
+
+.styled-table {
+  border-collapse: collapse;
+  margin: 25px 0;
+  font-size: 0.9em;
+  font-family: sans-serif;
+  min-width: 400px;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
+  position: relative;
+  justify-self: flex-end;
+}
+.styled-table thead tr {
+  background-color: #009879;
+  color: #ffffff;
+  text-align: left;
+}
+.styled-table th,
+.styled-table td {
+  padding: 12px 15px;
+}
+
+.styled-table tbody tr {
+  border-bottom: 1px solid #dddddd;
+}
+
+.styled-table tbody tr:nth-of-type(even) {
+  background-color: var(--primary-color);
+}
+
+.styled-table tbody tr:last-of-type {
+  border-bottom: 2px solid var(--primary-color);
+}
+
+/* .form {
+  position: relative;
+  border-radius: 5px;
+  background-color: #fafafa;
+  padding: 20px 0 30px 0;
+  float: center;
+  width: 50%;
+  margin: auto;
+  padding: 0 50px;
+  margin-top: 6px;
+} */
+
+input[type="text"],
+input[type="email2"],
+input[type="password"] {
+  width: 50%;
+  margin: 8px 0;
+  padding: 12px 20px;
+  display: inline-block;
+  border: 2px solid var(--primary-color);
+  box-sizing: border-box;
+}
+
+.img-fluid {
+  width: 200px;
 }
